2008-09-29  Sergey Poznyakoff  <gray@gnu.org.ua>

	* config/mailutils-config.c (main): Do not print flag descriptions
	on --info, this breaks existing scripts.
	New option --verbose makes --info print verbose descriptions.
	* include/mailutils/version.h (mu_fprint_options)
	(mu_fprint_conf_option): Take additional argument.
	* mailbox/argcv.c (quote_transtab): Handle \".
	* mailbox/cfg_driver.c (mu_cfg_string_value_cb): Bugfix
	* mailbox/cfg_lexer.l: Allow * and = in non-quoted words.
	Improve 'stray character' diagnostics'.
	(unescape_to_line): Handle \\ and \".
	* mailbox/version.c (mu_fprint_options)
	(mu_fprint_conf_option): New argument `verbose' instructs whether
	to print textual descriptions.
	(mu_fprint_conf_option): Print single space after the flag to
	facilitate writing parser scripts.
	* testsuite/lib/mailutils.exp: Reflect this change.

2008-09-22  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Define LOG_FACILITY_STRING, a string
	representation of syslog facility.
	* mailbox/cfg_lexer.l: Re-introduce pragmatic comment
	#debug=, for setting debugging level in config module.
	* mailbox/cfg_parser.y: Likewise.
	* mailbox/gdebug.c (mu_debug_level_from_string): Ignore trailing
	newline.
	* mailbox/version.c (mu_conf_option): Add SYSCONFDIR, MAILSPOOLDIR
	and LOG_FACILITY.

	* mh/mh_init.c (mh_list_format): Reformat to make it more
	readable. Use decode primitive on header fields that may be
	encoded.
	
	* doc/texinfo/mailutils.texi: Further update.
	* doc/texinfo/programs.texi: Likewise.

2008-09-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Configure doc hints.
	* config/mailutils-config.c (main): Use mu_fprint_conf_option.
	* mailbox/version.c (mu_conf_option): Change type.
	(mu_fprint_conf_option): New function.
	(mu_fprint_options): Use mu_fprint_conf_option.
	(mu_print_options): Fix signature
	(mu_check_option): Change return type.
	* testsuite/lib/mailutils.exp (mu_version): Reflect changes in the